traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 8080
